Add account information loading from environment variables and update test cases

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ API_KEY=your-secure-api-key-here  # Replace with your actual API key
 API_VERSION=v1
 MAX_SMS_LENGTH=1000
 MIN_SMS_LENGTH=10
+
+# Account Information (for SMS parsing)
+# Format: ACCOUNT_IDENTIFIER:ACCOUNT_NUMBER, separate multiple with semicolons
+CARD_INFO=your_card_identifier:your_card_number
+ACC_INFO=your_account_identifier:your_account_number
